feat: restore YouTube/Piped backend with self-hosted yt-dlp extractor and bytes proxying